k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeguard
  namespace: kubeguard
  labels:
    app.kubernetes.io/name: kubeguard
    app.kubernetes.io/component: security-scanner
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kubeguard
    app.kubernetes.io/component: security-scanner
